Add css to the calculator display and clear button

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="number">0</div> 
             </div>
             <div class="operator-container">
-                <div class="operator">back</div>
+                <div class="operator">clear</div>
                 <div class="operator">+</div>   
                 <div class="operator">-</div> 
                 <div class="operator">%</div> 
