--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <script src="./calculator.js" defer></script>
+    <script src="./calculator2.js" defer></script>
     <title>Calculator</title>
 </head>
 <body>
@@ -24,12 +24,12 @@
                 <div class="number">0</div> 
             </div>
             <div class="operator-container">
-                <div class="operator">clear</div>
+                <div class="operator special">clear</div>
                 <div class="operator">+</div>   
                 <div class="operator">-</div> 
                 <div class="operator">%</div> 
                 <div class="operator">x</div> 
-                <div class="operator">=</div>        
+                <div class="operator special">=</div>        
             </div>
         </div>
     </div>
