--- a/index.html
+++ b/index.html
@@ -9,27 +9,32 @@
 </head>
 <body>
     <div class="main-div">
-        <div class="screen-display">display</div>
+        <div class="screen-display">
+            <div class="prev-display"></div>
+            <div class="current-display">0</div>
+        </div>
         <div class="button-container">
             <div class="number-container">
-                <div class="number">1</div>
-                <div class="number">2</div>
-                <div class="number">3</div>
-                <div class="number">4</div>
-                <div class="number">5</div>
-                <div class="number">6</div>
-                <div class="number">7</div>
-                <div class="number">8</div>
-                <div class="number">9</div>   
-                <div class="number">0</div> 
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>   
+                <button class="number">0</button> 
+
             </div>
             <div class="operator-container">
-                <div class="operator special">clear</div>
-                <div class="operator">+</div>   
-                <div class="operator">-</div> 
-                <div class="operator">%</div> 
-                <div class="operator">x</div> 
-                <div class="operator special">=</div>        
+                <button class="operator">clear</button>
+                <button class="operator">+</button>   
+                <button class="operator">-</button> 
+                <button class="operator">/</button> 
+                <button class="operator">x</button> 
+                <button class="operator">.</button>
+                <button class="operator">=</button>        
             </div>
         </div>
     </div>
