Adjust calculator to the new HTML.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main-div">
         <div class="screen-display">
             <div class="prev-display"></div>
-            <div class="current-display">0</div>
+            <div class="current-display"></div>
         </div>
         <div class="button-container">
             <div class="number-container">
