Add decimal and backspace functions.

--- a/index.html
+++ b/index.html
@@ -15,26 +15,27 @@
         </div>
         <div class="button-container">
             <div class="number-container">
-                <button class="number">1</button>
-                <button class="number">2</button>
-                <button class="number">3</button>
-                <button class="number">4</button>
-                <button class="number">5</button>
-                <button class="number">6</button>
-                <button class="number">7</button>
-                <button class="number">8</button>
-                <button class="number">9</button>   
-                <button class="number">0</button> 
+                <button class="numb-but number">1</button>
+                <button class="numb-but number">2</button>
+                <button class="numb-but number">3</button>
+                <button class="numb-but number">4</button>
+                <button class="numb-but number">5</button>
+                <button class="numb-but number">6</button>
+                <button class="numb-but number">7</button>
+                <button class="numb-but number">8</button>
+                <button class="numb-but number">9</button>   
+                <button class="numb-but number">0</button> 
+                <button class="numb-but back">back</button> 
 
             </div>
             <div class="operator-container">
-                <button class="operator">clear</button>
-                <button class="operator">+</button>   
-                <button class="operator">-</button> 
-                <button class="operator">/</button> 
-                <button class="operator">x</button> 
-                <button class="operator">.</button>
-                <button class="operator">=</button>        
+                <button class="op-but operator">clear</button>
+                <button class="op-but operator">+</button>   
+                <button class="op-but operator">-</button> 
+                <button class="op-but operator">/</button> 
+                <button class="op-but operator">x</button> 
+                <button class="op-but dot">.</button>
+                <button class="op-but operator">=</button>        
             </div>
         </div>
     </div>
