Delete if statement for clear button.
instead put it in a separated function

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             </div>
             <div class="operator-container">
-                <button class="op-but operator">clear</button>
+                <button class="op-but clear">clear</button>
                 <button class="op-but operator">+</button>   
                 <button class="op-but operator">-</button> 
                 <button class="op-but operator">/</button> 
