Add color to operator buttons when pressed.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button class="op-but clear">clear</button>
                 <button class="op-but operator">+</button>   
                 <button class="op-but operator">-</button> 
-                <button class="op-but operator">/</button> 
+                <button class="op-but operator">÷</button> 
                 <button class="op-but operator">x</button> 
                 <button class="op-but dot">.</button>
                 <button class="op-but operator">=</button>        
