Add css to the calculator and body.

--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
         </div>
         <div class="button-container">
             <div class="number-container">
-                <button class="numb-but number">1</button>
-                <button class="numb-but number">2</button>
-                <button class="numb-but number">3</button>
+                <button class="numb-but number">7</button>
+                <button class="numb-but number">8</button>
+                <button class="numb-but number">9</button>
                 <button class="numb-but number">4</button>
                 <button class="numb-but number">5</button>
                 <button class="numb-but number">6</button>
-                <button class="numb-but number">7</button>
-                <button class="numb-but number">8</button>
-                <button class="numb-but number">9</button>   
+                <button class="numb-but number">1</button>
+                <button class="numb-but number">2</button>
+                <button class="numb-but number">3</button>
+                <button class="numb-but clear">AC</button>
                 <button class="numb-but number">0</button> 
-                <button class="numb-but back">back</button> 
+                <button class="numb-but dot">.</button>
 
             </div>
             <div class="operator-container">
-                <button class="op-but clear">clear</button>
+                <button class="op-but back">back</button> 
                 <button class="op-but operator">+</button>   
                 <button class="op-but operator">-</button> 
                 <button class="op-but operator">÷</button> 
-                <button class="op-but operator">x</button> 
-                <button class="op-but dot">.</button>
+                <button class="op-but operator">x</button>
                 <button class="op-but operator">=</button>        
             </div>
         </div>
